fixed wrapping long titles

--- a/assets/css/gallery.styl
+++ b/assets/css/gallery.styl
@@ -38,6 +38,9 @@
 	margin: 15px
 	box-shadow 0 0 10px black
 
+.slides
+	display inline-block
+
 #portfolio-sidebar
 	width: 150px
 	margin-right -165px
